Fix: Alignment for sort icons in number and date columns in Bootstrap
https://datatables.net/forums/discussion/80889

--- a/css/dataTables.bootstrap.scss
+++ b/css/dataTables.bootstrap.scss
@@ -187,7 +187,7 @@ table.dataTable.table-condensed > thead > tr {
 		&.dt-type-date,
 		&.dt-type-numeric {
 			span.dt-column-order {
-				right: 4px;
+				left: 4px;
 			}
 		}
 	}
