--- a/css/dataTables.bootstrap4.scss
+++ b/css/dataTables.bootstrap4.scss
@@ -183,7 +183,7 @@ table.dataTable.table-sm > thead > tr {
 		&.dt-type-date,
 		&.dt-type-numeric {
 			span.dt-column-order {
-				right: 4px;
+				left: 4px;
 			}
 		}
 	}
