--- a/css/dataTables.bootstrap5.scss
+++ b/css/dataTables.bootstrap5.scss
@@ -175,7 +175,7 @@ table.dataTable.table-sm > thead > tr {
 		&.dt-type-date,
 		&.dt-type-numeric {
 			span.dt-column-order {
-				right: 0.25rem;
+				left: 0.25rem;
 			}
 		}
 	}
